# ChangeLog for media-libs/libass
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-libs/libass/ChangeLog,v 1.52 2012/05/15 13:02:07 aballier Exp $

  15 May 2012; Alexis Ballier <aballier@gentoo.org> libass-0.10.0.ebuild:
  keyword ~amd64-fbsd

  05 May 2012; Jeff Horelick <jdhore@gentoo.org> libass-0.9.8.ebuild,
  libass-0.9.11.ebuild, libass-0.9.12.ebuild, libass-0.9.13.ebuild,
  libass-0.10.0.ebuild:
  dev-util/pkgconfig -> virtual/pkgconfig

  20 Nov 2011; Kacper Kowalik <xarthisius@gentoo.org> libass-0.9.13.ebuild:
  ppc/ppc64 stable wrt #377255

  19 Oct 2011; Jeroen Roovers <jer@gentoo.org> libass-0.9.13.ebuild:
  Stable for HPPA (bug #377255).

  09 Oct 2011; Raúl Porcel <armin76@gentoo.org> libass-0.9.13.ebuild:
  alpha/ia64/sparc stable wrt #377255

*libass-0.10.0 (05 Oct 2011)

  05 Oct 2011; Alexis Ballier <aballier@gentoo.org> +libass-0.10.0.ebuild,
  metadata.xml:
  version bump

  20 Sep 2011; Tony Vroon <chainsaw@gentoo.org> libass-0.9.13.ebuild:
  Marked stable on AMD64 based on arch testing by Agostino "ago" Sarubbo & Ian
  "idella4" Delaney in bug #377255.

  18 Sep 2011; Markus Meier <maekke@gentoo.org> libass-0.9.13.ebuild:
  arm stable, bug #377255

  14 Sep 2011; Andreas Schuerch <nativemad@gentoo.org> libass-0.9.13.ebuild:
  x86 stable, see bug #377255

*libass-0.9.13 (02 Aug 2011)

  02 Aug 2011; Alexis Ballier <aballier@gentoo.org> +libass-0.9.13.ebuild:
  version bump

*libass-0.9.12 (03 Jun 2011)

  03 Jun 2011; Tim Harder <radhermit@gentoo.org> +libass-0.9.12.ebuild:
  Version bump (requested by Nikoli). Update LICENSE and bump to EAPI 4.

  22 May 2011; Joseph Jezak <josejx@gentoo.org> libass-0.9.11.ebuild:
  Marked ppc stable for bug #343977.

  05 Apr 2011; Tomáš Chvátal <scarabeus@gentoo.org> -libass-0.9.9.ebuild,
  -libass-0.9.10.ebuild, libass-0.9.11.ebuild:
  Make static-libs optional. Punt .la files. Drop overshadowed versions.
