@@ -1,22 +1,24 @@
 -----BEGIN PGP SIGNED MESSAGE-----
-Hash: SHA1
+Hash: SHA256
 
-DIST libass-0.10.0.tar.xz 256780 RMD160 62deb390a8fb7f5f39236a746cd50090da0801ce SHA1 7a0ea048f687421f3e1314988ca02f04861fc5f0 SHA256 4da592020f6d7db889ec7bb09a2c78afa17b18eb86b9ffc6237d5a575ebd7541
-DIST libass-0.9.11.tar.bz2 297004 RMD160 593e008b802cf4d2ac662f9e648970b5c47d3070 SHA1 6f69f6c4474c649de4fd7913b050bfd4cf8110cb SHA256 ffd0a7ccf635c4795edb8f61015b47ff84ec9c5babf502dd2cc8223d4489745c
-DIST libass-0.9.12.tar.xz 250268 RMD160 be9998877bd07f0854434c1dbd3a0073f0647376 SHA1 7ce9689a6a3f822477880f3d11203a7f65444396 SHA256 182def63aa882f409252a5b4a128fff43e33fc7be4f68fbaf9e9e834060ef8d9
-DIST libass-0.9.13.tar.xz 250536 RMD160 c30bbcf872ccd14002f24f73c13cee4e4a7b2473 SHA1 05e210bd081af3e542778bd3a687724547fcd2ca SHA256 eef55595355cd4dd14b88b61d4e34c7bcfb6060a6b28f5a9ebc7dd5a72b69cc8
-DIST libass-0.9.8.tar.bz2 279121 RMD160 47c8187f8cb65fe23624986a4e962dcbc2226950 SHA1 702d6d12c540e42d8e6505c60505e363ef85511a SHA256 9e04001665cf5ac54c19a0e69ad9135a96ae34e82332cb2163c7fbb0f0ab4ed2
-EBUILD libass-0.10.0.ebuild 1088 RMD160 7482001389b2519abc7eaa3b0d83d14ab63fd42f SHA1 b5d835951e0a07f70727deb82e927c10115733c6 SHA256 6e00b0e3efe237a224f389708f1b99f2f7adbdabc416322bb356111c589d26de
-EBUILD libass-0.9.11.ebuild 996 RMD160 c4f73723f8ede02663c345242b65c69217b0d432 SHA1 357ba71c108ee0da089fc71a20f402d0a5a1b2bc SHA256 613f0c43f7f87b010e1b60305d289ebe355d94b48b729b19c1d1692d1dd45814
-EBUILD libass-0.9.12.ebuild 976 RMD160 4715e6d2ad0ef0c9a2424dcbd0b9f0b6f7efd69c SHA1 8dcee378547a10a3298f9c648dd1c895a19bb0c7 SHA256 7971662f08e500bef8cd082d80f5ab207a138d128468c99f2faa93cfc0123148
-EBUILD libass-0.9.13.ebuild 967 RMD160 171c538d014deb485af590e36af8d4d79f423562 SHA1 8bda5350484f767db812e392505aa7f4532f4d4f SHA256 7f2ce48375b9ef07c513cc2f19a7ed8f9e28cb43af96dfc956eedf1235491225
-EBUILD libass-0.9.8.ebuild 906 RMD160 87e3f434f26905ebfb6f354988b3b48e044f1acb SHA1 1557da860a8b29cb53a81bc01e01b605e6ba18e6 SHA256 ff861cf28e6ed28f17d88dcfb1f33f9870f1336e6aad3913e2fe6c4d8544b689
-MISC ChangeLog 6672 RMD160 9b3ff830192ed07d3a1aa288693dad3721952140 SHA1 ceb19dfb35c13d9a158490752a954c4306053ce5 SHA256 c8ee6cc0cfd155aa5a229475016474b03ebe607aedf9f4f102a773572cfc2d2e
-MISC metadata.xml 409 RMD160 da222433c561492bc6546bcd29aafd4621bf50de SHA1 0b62c8a88319de6b70d7fd8cf76ec3e327e7068d SHA256 1c11ee8622d14f7e37288db8b5ebaf9e5aaa1d8bcaf850cdcad5883bfa99edf5
+DIST libass-0.10.0.tar.xz 256780 SHA256 4da592020f6d7db889ec7bb09a2c78afa17b18eb86b9ffc6237d5a575ebd7541 SHA512 82065fd8fe5641f6d1fb11b82fe64f3ae09a8fc1251b0dcee72dd874ed3f34f3f80c05cbf1a0cfcd38c75d9fb4b30a2852b09207edef08d5d99091163d57273d WHIRLPOOL 16edc36b969461e5d3a3075fa83d2b95d017f17377e39318833c3e74dbd3ef6695ebcb19691f71aec41004cdf0ae55b7edf63584e4339d695a2275932c70a7bb
+DIST libass-0.10.1.tar.xz 257792 SHA256 fbf287ac6d0dbdf015783b7354280ad8371c106326ad3f77a99471bc5aa18210 SHA512 3990886b9e708bf29f48921f65f99cee85031e299065860bce4f3e626970f82e60130b7525c1aaaf40e02c7b49d7003378724dbcf72db5894ab79768776694cf WHIRLPOOL 7278b893a047f8d0709e0b644495e2f42e4a10aea3174a91eea055501d66ad70f3bc7e924c49aaa9f8de3ddadc564aefbb6f35a0158ed714bf1486e275e1706b
+DIST libass-0.9.11.tar.bz2 297004 SHA256 ffd0a7ccf635c4795edb8f61015b47ff84ec9c5babf502dd2cc8223d4489745c
+DIST libass-0.9.12.tar.xz 250268 SHA256 182def63aa882f409252a5b4a128fff43e33fc7be4f68fbaf9e9e834060ef8d9
+DIST libass-0.9.13.tar.xz 250536 SHA256 eef55595355cd4dd14b88b61d4e34c7bcfb6060a6b28f5a9ebc7dd5a72b69cc8
+DIST libass-0.9.8.tar.bz2 279121 SHA256 9e04001665cf5ac54c19a0e69ad9135a96ae34e82332cb2163c7fbb0f0ab4ed2
+EBUILD libass-0.10.0.ebuild 1088 SHA256 6e00b0e3efe237a224f389708f1b99f2f7adbdabc416322bb356111c589d26de SHA512 4fa62d78a2cf81399ffbfd7988049ecf7825816b706d6fd7823e7988c36f30f96b949754bcec9d4d8d16105b7f74720f02748c2f858cf638c739d3d080ea213b WHIRLPOOL 03aa2a183fb1d707632e67b170a415c8371f79a164df12b67b2325c0f6cbba24d163e15fd00e0433c3b9ba15fc131198abbb228d347b0e811c282a15e798659b
+EBUILD libass-0.10.1.ebuild 1094 SHA256 690962d47b1f4d5e92b765d3e02bbe7f3040fc981acfa37b4d3b857251aee503 SHA512 20ec03b1cbfeecafdfba7b476ac578fa1618cdabff71f50ec6398b8dc9d1ceaafc7fa62cc71751894d9aeec8364cb537436a4233075b7c27443a3b677e629715 WHIRLPOOL 90f6c7f2cc0667874aef8382fc2a56579ecf80eea8ab50b045930016a77813dbf3a18a09521a0c415cdfa7783d8d17baa1c7ea5bd1d86345b2e589381f2513fd
+EBUILD libass-0.9.11.ebuild 996 SHA256 613f0c43f7f87b010e1b60305d289ebe355d94b48b729b19c1d1692d1dd45814 SHA512 c1e57bce6e67524d3b8e9793af6080ed7450eb1a77941baf07f02412cac201a3e92481d226b1d5006862d5ca551c4b028a56d33c19adb289cc1e9e46273c99aa WHIRLPOOL c2a4ffc3fe20461c09dac4d4530996ffa1569fb2d35005e65c977491b437c8b4838d7c4d060aadde6e6b81744ae2a1e19d2c23dff3887f2fa1f3a8300aaf3145
+EBUILD libass-0.9.12.ebuild 976 SHA256 7971662f08e500bef8cd082d80f5ab207a138d128468c99f2faa93cfc0123148 SHA512 17cdd41cd3f171dba84803534fcf3a878dbee65217ed128172cb1cd4dbf24e4029f12c6f22a2fea29fba575862b6534596877eb26731f78f050a6e7be0641f42 WHIRLPOOL f03b4af2d7e637dcbb3415a3910725fc278ddd29a08c29662813064b4c3718dd697897db83c7bb97bbcd6fb3a3aba1dbb9efbd456b81c1a9f65834a864e6f688
+EBUILD libass-0.9.13.ebuild 967 SHA256 7f2ce48375b9ef07c513cc2f19a7ed8f9e28cb43af96dfc956eedf1235491225 SHA512 c50ec13570796ac2d4573226c182e997dd1b14a4ad702d157684e3d06ccc6be1591352c149a6175a7cb6388442753ae1233fbc47b7ce3469d9ea8aa34b35b855 WHIRLPOOL 4cc33f058f4acbbe6d5f84ebed02dcdfdd2df34734bfe62ba465fd3f390e022adde89a31050d56163a8330766602a518b0d8dca9232dd7cb9b37a8ec3a55c683
+EBUILD libass-0.9.8.ebuild 906 SHA256 ff861cf28e6ed28f17d88dcfb1f33f9870f1336e6aad3913e2fe6c4d8544b689 SHA512 8930818a629014ee0424fd33df70ced813e444095497c07d6b12215d278392d3e3c4181f95ddd41f22e78d9f759aecbd1930e28c8276de5e8672e754bdeb2ee5 WHIRLPOOL 1463320562625e326a7d0f2d8d0f9eab153945c6be4b8173590a8a42c66b20c7c4a7ebc058f7b56632e97028a0f45586a3fce9af3361495fe600f49471a86b93
+MISC ChangeLog 6793 SHA256 908a3d2a0af3a48b668a10031d4d08650fb340ed60582d1578c8b28200f12774 SHA512 a3d081976a3806d437cfd949478d3246e5cce662514b58292fb1645ccedf6a67e9c01d8504a3b58d26d4b6672d6b2eaff35e628a1f9d0831581095cbe9016b31 WHIRLPOOL 127d4c8556ebd9e29617fc165262ec2134b2b2c9bf254dfefbacf2d1d10f3abf4153f0791ac5e18336e673382c410b1771654f51023b996f7c4cb058c8fec31b
+MISC metadata.xml 409 SHA256 1c11ee8622d14f7e37288db8b5ebaf9e5aaa1d8bcaf850cdcad5883bfa99edf5 SHA512 e973ac3980de43932940248becd35613152c7a3dfab41e5e9933f3131cd435cea90ad459cff84f459127e53590ebea39b9beb50666cc9296cbe4d602831d290a WHIRLPOOL 66701d01ca2029e0155b741fba4f82467d078404cb1eaf0a74b5e496f508d06dae123c7befb8f2837601286a6b68caf5acc1f9aeda5381d40f113cc9a02bc2e8
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.19 (GNU/Linux)
 
-iEYEARECAAYFAk+yU9UACgkQvFcC4BYPU0pBKgCcD1gbShMT2MYgyOKgmyIZNnpS
-RjUAn2Wwume9zOIAsrmlhlyQ7LcuXF2b
-=grfA
+iEYEAREIAAYFAlB/AlMACgkQvFcC4BYPU0pl6QCeNB9NWQ5700JMq76zd7wTzGeX
+2WYAn1S82egDIYnGetgcbcVLQ4AsguHZ
+=kOk8
 -----END PGP SIGNATURE-----
