@@ -1,6 +1,11 @@
 # ChangeLog for media-libs/libass
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-libs/libass/ChangeLog,v 1.52 2012/05/15 13:02:07 aballier Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-libs/libass/ChangeLog,v 1.53 2012/10/17 19:09:06 aballier Exp $
+
+*libass-0.10.1 (17 Oct 2012)
+
+  17 Oct 2012; Alexis Ballier <aballier@gentoo.org> +libass-0.10.1.ebuild:
+  version bump
 
   15 May 2012; Alexis Ballier <aballier@gentoo.org> libass-0.10.0.ebuild:
   keyword ~amd64-fbsd
